# graph-ce

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: activation_through_layers.py  compare_initializations.py  explore_plateau_topology.py  generation_progression.py  generation_trajectory_distribution.py  init_policy_distribution.py  launch_detached.sh
src/graph_ce/: __init__.py  cem.py  config.py  coordinator.py  island.py  logging_setup.py  matching.py  model.py  plot_trajectories.py  plot_winner.py  run.py  sampler.py  score.py  status.py  verify.py
tests/: test_matching.py  test_model.py  test_sampler.py  test_score.py  test_selection.py  test_smoke.py  test_verify.py
