[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_ce"
version = "0.1.0"
description = "Cross-entropy method for combinatorial conjectures, parallelized across CPUs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "matplotlib>=3.7",
    # Used only for visualization (kamada_kawai layout in graph-ce-plot-winner)
    # and as an oracle in the matching stress test. The actual matching
    # algorithm used at runtime is graph_ce.matching, not networkx.
    "networkx>=3.0",
    # scipy is a transitive requirement of networkx's kamada_kawai_layout.
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
graph-ce = "graph_ce.run:main"
graph-ce-status = "graph_ce.status:main"
graph-ce-plot = "graph_ce.plot_trajectories:main"
graph-ce-plot-winner = "graph_ce.plot_winner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
